# StudyRecord

./: .gitignore  LICENSE.txt  README.md  RecordStatistics
BasicKnowledge/T_Test/: core.txt
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/: .gitignore  CMakeLists.txt  record.txt
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_!linux/: Makefile  app_function_test.h  main.c  reset.sh  thread_master  thread_mix_custom  thread_mix_irq
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_!linux/source/: thread_mix_custom
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_!make/: Makefile
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_!script/struct_parse/: struct_parser.py
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_arch/: CMakeLists.txt  app_arch_interface.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_arch/app_arch_adaptor/: CMakeLists.txt  app_arch_adaptor.h  app_arch_adaptor_pc.c  app_arch_adaptor_pc.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_arch/app_arch_ext_mem/: CMakeLists.txt  app_arch_ext_mem.h  app_arch_ext_mem_pc.c
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_arch/app_arch_ext_mem/app_arch_ext_mem_mode/: app_arch_ext_mem_fs.h  app_arch_ext_mem_raw.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_os/: CMakeLists.txt  app_os_interface.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_os/app_os_adaptor/: CMakeLists.txt  app_os_adaptor.h  app_os_adaptor_freertos.c  app_os_adaptor_freertos.h  app_os_adaptor_linux.c  app_os_adaptor_linux.h  app_os_adaptor_zephyr.c  app_os_adaptor_zephyr.h  app_os_build_time.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_os/app_os_ext_mem/: CMakeLists.txt  app_os_ext_mem.h  app_os_ext_mem_linux.c
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_os/app_os_ext_mem/app_os_ext_mem_mode/: app_os_ext_mem_fs.h  app_os_ext_mem_raw.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_sys/: CMakeLists.txt  app_sys_interface.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_sys/app_sys_event/: app_sys_event.c  app_sys_event.h  app_sys_event.py  app_sys_event.txt
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_sys/app_sys_ext_mem/: app_sys_ext_mem.c  app_sys_ext_mem.h  app_sys_ext_mem_table.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_sys/app_sys_pipe/: CMakeLists.txt  app_sys_pipe.c  app_sys_pipe.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_sys/app_sys_ring_buffer/: CMakeLists.txt  app_sys_ring_buffer.c  app_sys_ring_buffer.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_sys/app_sys_struct_parse/: app_sys_struct_parse.h  app_sys_struct_parse.json  app_sys_struct_parse.py
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_sys/app_sys_util/: CMakeLists.txt  app_sys_checksum32.c  app_sys_checksum32.h  app_sys_crc32.c  app_sys_crc32.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_thread/: CMakeLists.txt  app_thread_interface.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_thread/app_thread_master/: CMakeLists.txt  app_module_system.c  app_module_system.h  app_thread_adaptor_zephyr.h  app_thread_master.c  app_thread_master.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_thread/app_thread_master/app_module_ext_mem/: app_module_ext_mem.c  app_module_ext_mem.h  app_module_ext_mem_table.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_thread/app_thread_master/app_module_source/: app_module_source.h  app_module_source_table.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_thread/app_thread_master/app_module_system/: CMakeLists.txt  app_module_system.c  app_module_system.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_thread/app_thread_master/app_thread_adaptor/: CMakeLists.txt  app_thread_adaptor.h  app_thread_adaptor_freertos.h  app_thread_adaptor_linux.h  app_thread_adaptor_zephyr.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_thread/app_thread_mix_custom/: CMakeLists.txt  app_module_alarm.c  app_module_alarm.h  app_module_clock.h  app_module_clock_cb.h  app_module_countdown.c  app_module_dump.c  app_module_stopwatch.c  app_module_stopwatch.h  app_module_world_time.h  app_module_world_time_table.h  app_thread_mix_custom.c  app_thread_mix_custom.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_thread/app_thread_mix_custom/app_module_alarm/: CMakeLists.txt  app_module_alarm.c
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_thread/app_thread_mix_irq/: CMakeLists.txt  app_thread_mix_irq.c  app_thread_mix_irq.h
KnowledgeSet/A_Component/C_FunctionLibrary/A_Module/A_GLibC/app_thread_group/app_thread/app_thread_source_manage/: CMakeLists.txt  app_thread_source_manage.c  app_thread_source_manage.h
(+1212 files in other folders)
